--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <main>
         <form action="">
             <label for="userHandle">Search user handle: <input name="userHandle" type="text"></label>
+            <button type="submit">Submit</button>
         </form>
+        <ul id="render">
+            
+        </ul>
     </main>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
